// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLayout renders correctly (snapshot) 1`] = `
<RCTSafeAreaView
  style={
    [
      {
        "flex": 1,
        "paddingTop": 0,
      },
      {
        "backgroundColor": "#fff",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flex": 1,
          "padding": 16,
          "paddingBottom": 80,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 24,
            "fontWeight": "bold",
            "marginBottom": 8,
            "marginTop": 8,
          },
          {
            "color": "#000",
          },
          undefined,
        ]
      }
    >
      Test Title
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`PageLayout renders without header 1`] = `
<RCTSafeAreaView
  style={
    [
      {
        "flex": 1,
        "paddingTop": 0,
      },
      {
        "backgroundColor": "#fff",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flex": 1,
          "padding": 16,
          "paddingBottom": 80,
        },
        undefined,
      ]
    }
  />
</RCTSafeAreaView>
`;
